# researcher

./: .gitignore  Dockerfile.postgres  LICENSE  README.md  docker-compose.yml  langgraph.json  pyproject.toml
api/: README.md  app.py
api/route/: auth.py  file.py  message.py  research.py  s3.py  thread.py
api/utils/: auth.py
client/: README.md  __init__.py  main.py  streamlit_app.py
client/auth/: cognito.py
client/components/: __init__.py  footer.py  message.py  signin.py  signup.py
client/dialog/: __init__.py  auth.py  file.py  thread.py
client/hooks/: __init__.py  chat.py  clear_thread_history.py  create_new_thread.py  file.py  get_ai_response.py  get_messages_by_thread_id.py  get_user_threads.py  thread.py
client/pages/: chat.py  home.py
client/screens/: file.py  research.py
client/style/: main.css
infra/: README.md  main.tf  networking.tf  output.tf
init/: README.md  create_chat_history_table.sql  create_checkpoints_table.sql  create_files_table.sql  create_threads_table.sql
langgraph_api/: api.py
researcher/: README.md
researcher/agent/: researcher.py
researcher/api/: app.py
researcher/checkpoint/: __init__.py  checkpoint.py
researcher/document/: document.py
researcher/embeddings/: embeddings.py
researcher/graph/: researcher.py
researcher/history/: __init__.py  history.py
researcher/llm/: provider.py
researcher/memory/: __init__.py  memory.py
researcher/retriever/: __init__.py  tavily.py
researcher/state/: __init__.py  graph.py
researcher/store/: __init__.py  (+1 more)
tests/: test_pgembeddings.py  test_vectorstore.py
(+12 files in other folders)
